--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/openssl"]
 	path = vendor/openssl
-	url = https://github.com/serenial/openssl.git
+	url = https://github.com/serenial/openssl-windows-binaries
 [submodule "vendor/libgit2"]
 	path = vendor/libgit2
 	url = https://github.com/serenial/libgit2.git
@@ -11,3 +11,6 @@
 	path = vendor/zlib
 	url = https://github.com/serenial/zlib.git
 	ignore = untracked
+[submodule "vendor/openssl-windows-binaries"]
+	path = vendor/openssl-windows-binaries
+	url = https://github.com/serenial/openssl-windows-binaries
